knowledge_base/knowledge/v15/capl/structured/Obsolete/coSetOperatingMode.md
# coSetOperatingMode

> Category: `Obsolete` | Type: `notes`

## Description

See Also

| Deprecated Function Replaced by CANopen Basic Functions. |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | void coSetOperatingMode( dword msgTriggered, dword cycleTime, dword errCode[] ); |  |  |  |
| Function | The function sets the work mode of the node. As default setting the node operates at a cycle time of 5 ms not triggered by messages. This means it is processed in a fixed grid. In extreme cases, 5 ms occur until an SDO request of another node is answered. If the node is set to message-triggered mode using this function now, it reacts as fast as possible to the messages sent to it. The indicated cycle time specifies in which time interval the node is executed. For example, this determines how fast given commands are processed or how occurring events (boot-up of a node) are reported to the application. This function allows the behavior of real ECUs to be better simulated because a fixed cycle time is often used here for the communication section of the software. A short cycle time can be used simultaneously with message-triggered mode in order to obtain the fastest possible reaction of the node. Note The real reaction time in message-triggered mode depends on multiple factors, for example, on the number of simulated nodes, the processor load, and the general performance of the PC. | Note The real reaction time in message-triggered mode depends on multiple factors, for example, on the number of simulated nodes, the processor load, and the general performance of the PC. |  |  |
| Note The real reaction time in message-triggered mode depends on multiple factors, for example, on the number of simulated nodes, the processor load, and the general performance of the PC. |  |  |  |  |
| Parameters | msgTriggered Specifies whether the node should work in message-triggered mode:0 - deactivate message triggering1 - activate message triggering |  |  |  |
| cycleTime Cycle time in ms for processing the node, value range 1..100 |  |  |  |  |
| errCode Error code buffer (is entered in index 0 of the field) |  |  |  |  |
| Return Values | — |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 6.0-9.0 SP6 | CANopen | — | • |  |
| Example dword errCode[1];// enable faster reaction times for messagescoSetOperatingMode( 1, 1, errCode );if (errCode[0] == 0) { write( "Message triggered mode successfully set" );} |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
